--- a/Opdracht_3/LinAlg Tutorial.ipynb
+++ b/Opdracht_3/LinAlg Tutorial.ipynb
@@ -533,11 +533,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0],\n",
+       "       [0, 3]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Hier uw antwoord"
+    "#Hier uw antwoord\n",
+    "np.array([[3,0],[0,3]])\n",
+    "\n",
+    "# 3 0\n",
+    "# 0 3"
    ]
   },
   {
