--- a/Opdracht_3/LinAlg Tutorial.ipynb
+++ b/Opdracht_3/LinAlg Tutorial.ipynb
@@ -783,11 +783,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.73205081 1.3660254 ]\n",
+      "[0.73205081 1.3660254 ]\n",
+      "[5.66025404 5.09807621]\n",
+      "[5.66025404 5.09807621]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Hier uw antwoord:"
+    "#Hier uw antwoord:\n",
+    "\n",
+    "#1. \n",
+    "R3 = rotationMatrix2D(np.pi/6)\n",
+    "\n",
+    "#2. \n",
+    "M21 = np.array([[2,0],[0,1]])\n",
+    "\n",
+    "v1 = np.array([1,1])\n",
+    "v2 = np.array([5,3])\n",
+    "\n",
+    "#tests with v1\n",
+    "v1r = np.dot(R3, v1)\n",
+    "v1rm = np.dot(M21, v1r)\n",
+    "print(v1rm)\n",
+    "\n",
+    "rm = np.dot(M21, R3)\n",
+    "rmv1 = np.dot(rm, v1)\n",
+    "print(rmv1)\n",
+    "\n",
+    "#tests with v2\n",
+    "v2r = np.dot(R3, v2)\n",
+    "v2rm = np.dot(M21, v2r)\n",
+    "print(v2rm)\n",
+    "\n",
+    "rm = np.dot(M21, R3)\n",
+    "rmv2 = np.dot(rm, v2)\n",
+    "print(rmv2)\n",
+    "\n"
    ]
   },
   {
