Added exercises in file 3

--- a/Opdracht_5/3-CNN_CIFAR_opdr.ipynb
+++ b/Opdracht_5/3-CNN_CIFAR_opdr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -22,7 +22,10 @@
     "from keras.utils import to_categorical\n",
     "from keras.datasets import cifar10\n",
     "\n",
-    "from scripts.load_data import load_train, load_test"
+    "from load_data import load_train, load_test\n",
+    "\n",
+    "import ssl\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context"
    ]
   },
   {
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -68,9 +71,9 @@
     "# Onze CNN\n",
     "\n",
     "# Stap 1: bepaal hoeveel filters je wilt, hoe groot je filter size moet zijn (let op je filter size mag niet te groot zijn vergeleken met je images), en wat je pool size is. \n",
-    "num_filters = \n",
-    "filter_size = \n",
-    "pool_size = \n",
+    "num_filters = 3\n",
+    "filter_size = 3\n",
+    "pool_size = 2\n",
     "\n",
     "# Stap 2: maak het model.\n",
     "#    In de array die je aan sequential meegeeft, zet je alle layers die in het model moeten:\n",
@@ -79,12 +82,19 @@
     "#    Flatten,\n",
     "#    Dense, parameters: aantal outputs, activation='softmax'\n",
     "\n",
-    "model = Sequential([])"
+    "model = Sequential([\n",
+    "    Conv2D(num_filters, filter_size, input_shape=train_images[0].shape),\n",
+    "    Conv2D(num_filters, filter_size, input_shape=train_images[0].shape),\n",
+    "    MaxPooling2D(pool_size=pool_size),\n",
+    "    Flatten(),\n",
+    "    Dense(10, activation=\"sigmoid\", name=\"dense\"),\n",
+    "    # Dense(10, activation=\"softmax\", name=\"dense\")\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -94,19 +104,18 @@
    "source": [
     "# Stap 3: het compilen van het model. \n",
     "# model.compile parameters: 'adam', loss='categorial_crossentropy', metrics=['accuracy']\n",
-    "model.compile()\n",
-    "\n",
+    "model.compile('adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# Stap 4: fit het model. \n",
     "#    Data om op te trainen: train_images, to_categorial(train_labels)\n",
     "#    epochs = 3\n",
     "#    validation_data = test_images, to_categorial(test_labels)\n",
-    "model.fit()"
+    "model.fit(train_images, to_categorical(train_labels), epochs=3, validation_data=(test_images, to_categorical(test_labels)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -125,8 +134,11 @@
    },
    "outputs": [],
    "source": [
-    "# Stap 6: extra layer(s). Wat gebeurt er als je een extra Conv Layer toevoegd aan je model? \n",
-    "#    Voeg een extra layer(s) toe en train het model opnieuw. \n",
+    "# Stap 6: extra layer(s). Wat gebeurt er als je een extra Conv Layer toevoegd aan je model?\n",
+    "#De accuracy wordt beter.\n",
+    "\n",
+    "#    Voeg een extra layer(s) toe en train het model opnieuw.\n",
+    "\n",
     "# Stap 7: parameters. Wat gebeurt er bijvoorbeeld als je geen softmax gebruikt maar een andere activatie? \n",
     "#    Pas op z'n minst 1 parameter aan en train je model opnieuw. "
    ]
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Stap 8: bouw je eigen CNN voor de CIFAR-10 dataset. \n",
     "# Tip: gebruik meerdere Conv2D en MaxPooling layers\n",
-    "# LET OP: gebruik 'softmax' alleen bij je laatste Dense layer. Gebruik 'relu' voor de andere Conv2D/Dense layers. \n",
-    "model_cif = Sequential([])\n",
+    "# LET OP: gebruik 'softmax' alleen bij je laatste Dense layer. Gebruik 'relu' voor de andere Conv2D/Dense layers.\n",
+    "\n",
+    "model_cif = Sequential([\n",
+    "    Conv2D(num_filters, filter_size, activation='relu', input_shape=train_images10[0].shape),\n",
+    "    Conv2D(num_filters, filter_size, activation='relu', input_shape=train_images10[0].shape),\n",
+    "    MaxPooling2D(pool_size=pool_size),\n",
+    "    MaxPooling2D(pool_size=pool_size),\n",
+    "    Flatten(),\n",
+    "    Dense(10, activation=\"relu\", name=\"dense_sigmoid\"),\n",
+    "    Dense(10, activation=\"softmax\", name=\"dense_softmax\")\n",
+    "])\n",
     "\n",
     "model_cif.compile(\n",
     "    'adam',\n",
@@ -174,21 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_cif.fit(\n",
     "  train_images10,\n",
     "  to_categorical(train_labels10),\n",
-    "  epochs= #hint: meer dan 3,\n",
-    "  validation_data=(test_images10, to_categorical(test_labels10)),\n",
+    "  epochs=10,\n",
+    "  validation_data=(test_images10, to_categorical(test_labels10))\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": []
