Added relu layer

--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import random\n",
     "\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, MaxPooling2D, Dense, Flatten\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Dense, Flatten, Activation\n",
     "from keras.utils import to_categorical"
    ]
   },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -221,27 +221,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "2407/2407 [==============================] - 28s 11ms/step - loss: 2.0181 - accuracy: 0.4194 - val_loss: 1.5459 - val_accuracy: 0.5480\n",
+      "2407/2407 [==============================] - 40s 16ms/step - loss: 2.0188 - accuracy: 0.4093 - val_loss: 1.5989 - val_accuracy: 0.5254\n",
       "Epoch 2/10\n",
-      "2407/2407 [==============================] - 30s 13ms/step - loss: 1.2532 - accuracy: 0.6338 - val_loss: 1.1157 - val_accuracy: 0.6841\n",
+      "2407/2407 [==============================] - 35s 14ms/step - loss: 1.3734 - accuracy: 0.5835 - val_loss: 1.2589 - val_accuracy: 0.6240\n",
       "Epoch 3/10\n",
-      "2407/2407 [==============================] - 30s 13ms/step - loss: 0.9734 - accuracy: 0.7183 - val_loss: 0.9374 - val_accuracy: 0.7288\n",
+      "2407/2407 [==============================] - 31s 13ms/step - loss: 1.1301 - accuracy: 0.6537 - val_loss: 1.0910 - val_accuracy: 0.6681\n",
       "Epoch 4/10\n",
-      "2407/2407 [==============================] - 29s 12ms/step - loss: 0.8039 - accuracy: 0.7688 - val_loss: 0.7953 - val_accuracy: 0.7690\n",
+      "2407/2407 [==============================] - 31s 13ms/step - loss: 0.9777 - accuracy: 0.6953 - val_loss: 1.0800 - val_accuracy: 0.6630\n",
       "Epoch 5/10\n",
-      "2407/2407 [==============================] - 28s 12ms/step - loss: 0.6782 - accuracy: 0.8078 - val_loss: 0.7001 - val_accuracy: 0.7913\n",
+      "2407/2407 [==============================] - 30s 13ms/step - loss: 0.8747 - accuracy: 0.7267 - val_loss: 0.8860 - val_accuracy: 0.7282\n",
       "Epoch 6/10\n",
-      "2407/2407 [==============================] - 28s 11ms/step - loss: 0.5813 - accuracy: 0.8352 - val_loss: 0.5892 - val_accuracy: 0.8339\n",
+      "2407/2407 [==============================] - 36s 15ms/step - loss: 0.7858 - accuracy: 0.7517 - val_loss: 0.9031 - val_accuracy: 0.7066\n",
       "Epoch 7/10\n",
-      "2407/2407 [==============================] - 28s 11ms/step - loss: 0.5059 - accuracy: 0.8575 - val_loss: 0.5324 - val_accuracy: 0.8468\n",
+      "2407/2407 [==============================] - 30s 12ms/step - loss: 0.7064 - accuracy: 0.7782 - val_loss: 0.7369 - val_accuracy: 0.7655\n",
       "Epoch 8/10\n",
-      "2407/2407 [==============================] - 28s 12ms/step - loss: 0.4444 - accuracy: 0.8746 - val_loss: 0.4933 - val_accuracy: 0.8535\n",
+      "2407/2407 [==============================] - 33s 14ms/step - loss: 0.6345 - accuracy: 0.8023 - val_loss: 0.6613 - val_accuracy: 0.7885\n",
       "Epoch 9/10\n",
-      "2407/2407 [==============================] - 28s 12ms/step - loss: 0.3940 - accuracy: 0.8899 - val_loss: 0.4405 - val_accuracy: 0.8671\n",
+      "2407/2407 [==============================] - 31s 13ms/step - loss: 0.5747 - accuracy: 0.8193 - val_loss: 0.5723 - val_accuracy: 0.8163\n",
       "Epoch 10/10\n",
-      "2407/2407 [==============================] - 28s 12ms/step - loss: 0.3532 - accuracy: 0.9016 - val_loss: 0.4113 - val_accuracy: 0.8776\n",
-      "313/313 - 1s - loss: 0.4113 - accuracy: 0.8776 - 1s/epoch - 5ms/step\n",
-      "0.8776000142097473\n"
+      "2407/2407 [==============================] - 34s 14ms/step - loss: 0.5228 - accuracy: 0.8350 - val_loss: 0.6135 - val_accuracy: 0.8039\n",
+      "313/313 - 3s - loss: 0.6135 - accuracy: 0.8039 - 3s/epoch - 10ms/step\n",
+      "0.8039000034332275\n"
      ]
     }
    ],
@@ -253,6 +253,7 @@
     "\n",
     "model = Sequential([\n",
     "    Conv2D(num_filters, filter_size, input_shape=train_images[0].shape),\n",
+    "    Activation(\"relu\"),\n",
     "    MaxPooling2D(pool_size=pool_size),\n",
     "    Flatten(),\n",
     "    Dense(29, activation=\"sigmoid\", name=\"dense\"),\n",
