Removed finished todo's

--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -61,10 +61,10 @@
     "image_gray = rgb2gray(image)\n",
     "\n",
     "#edge detection\n",
-    "canny_filter = feature.canny(image_gray, sigma=2) #TODO change sigma\n",
+    "canny_filter = feature.canny(image_gray, sigma=2) \n",
     "\n",
     "#gaussian filter                    #for rgb image\n",
-    "gaussian_filter = gaussian(image, multichannel=True, sigma=2) #TODO change sigma\n",
+    "gaussian_filter = gaussian(image, multichannel=True, sigma=2) \n",
     "\n",
     "# viewer = ImageViewer(image)\n",
     "# viewer.show()\n",
@@ -146,18 +146,17 @@
     "    \n",
     "    for image in os.listdir(path):\n",
     "        #get one image\n",
-    "        image_array = cv2.imread(os.path.join(path, image), cv2.IMREAD_GRAYSCALE) #TODO gray scale can be added here, do it??\n",
+    "        image_array = cv2.imread(os.path.join(path, image), cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "        #compress the image to a smaller resolution\n",
-    "        #TODO is this needed?? > makes faster\n",
-    "        image_size = 50 #TODO this bigger/smaller?\n",
+    "        image_size = 50\n",
     "        compressed_image_array = cv2.resize(image_array, (image_size, image_size))\n",
     "\n",
     "        #add canny filter\n",
     "        # canny_filter_image = feature.canny(compressed_image_array, sigma=3)\n",
     "\n",
     "        #add gaussian filter\n",
-    "        # gaussian_filter_image = gaussian(compressed_image_array, sigma=2) #TODO change sigma\n",
+    "        # gaussian_filter_image = gaussian(compressed_image_array, sigma=2)\n",
     "\n",
     "        #add new image to the training set\n",
     "        training_data.append([compressed_image_array, letter_num])"
@@ -352,7 +351,7 @@
     "num_filters = 10\n",
     "filter_size = 3\n",
     "pool_size = 2\n",
-    "num_epochs = 50 #TODO change these vars\n",
+    "num_epochs = 50\n",
     "\n",
     "model = Sequential([\n",
     "    Conv2D(num_filters, filter_size, input_shape=train_images[0].shape),\n",
