Added code for predicting classes

--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -375,6 +375,38 @@
     "test_loss, test_acc = model.evaluate(test_images,  to_categorical(test_labels), verbose=2)\n",
     "print(test_acc)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "[[1. 0. 1. 1. 0. 1. 0. 0. 0. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 1. 0. 1. 0.\n",
+      "  1. 1. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_to_predict = cv2.imread(\"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/asl_alphabet_test/Z_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "compressed_image_to_predict = cv2.resize(image_to_predict, (image_size, image_size))\n",
+    "reshaped_image_to_predict = compressed_image_to_predict.reshape(-1, image_size, image_size, 1)\n",
+    "\n",
+    "prediction = model.predict(reshaped_image_to_predict)\n",
+    "print(prediction)"
+   ]
   }
  ],
  "metadata": {
