--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -243,25 +243,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "2407/2407 [==============================] - 79s 33ms/step - loss: 1.4351 - accuracy: 0.5704 - val_loss: 0.6932 - val_accuracy: 0.7771\n",
-      "Epoch 2/5\n",
-      "2407/2407 [==============================] - 83s 34ms/step - loss: 0.5041 - accuracy: 0.8385 - val_loss: 0.3740 - val_accuracy: 0.8775\n",
-      "Epoch 3/5\n",
-      "2407/2407 [==============================] - 79s 33ms/step - loss: 0.2992 - accuracy: 0.9006 - val_loss: 0.2548 - val_accuracy: 0.9130\n",
-      "Epoch 4/5\n",
-      "2407/2407 [==============================] - 87s 36ms/step - loss: 0.2083 - accuracy: 0.9306 - val_loss: 0.2186 - val_accuracy: 0.9251\n",
-      "Epoch 5/5\n",
-      "2407/2407 [==============================] - 93s 39ms/step - loss: 0.1567 - accuracy: 0.9478 - val_loss: 0.1382 - val_accuracy: 0.9564\n",
-      "313/313 - 5s - loss: 0.1382 - accuracy: 0.9564 - 5s/epoch - 15ms/step\n",
-      "0.9563999772071838\n"
+      "Epoch 1/10\n",
+      "2046/2046 [==============================] - 79s 39ms/step - loss: 1.4910 - accuracy: 0.5570 - val_loss: 0.7621 - val_accuracy: 0.7596\n",
+      "Epoch 2/10\n",
+      "2046/2046 [==============================] - 82s 40ms/step - loss: 0.5441 - accuracy: 0.8252 - val_loss: 0.4216 - val_accuracy: 0.8676\n",
+      "Epoch 3/10\n",
+      "2046/2046 [==============================] - 79s 38ms/step - loss: 0.3363 - accuracy: 0.8901 - val_loss: 0.2620 - val_accuracy: 0.9161\n",
+      "Epoch 4/10\n",
+      "2046/2046 [==============================] - 83s 41ms/step - loss: 0.2402 - accuracy: 0.9206 - val_loss: 0.2244 - val_accuracy: 0.9293\n",
+      "Epoch 5/10\n",
+      "2046/2046 [==============================] - 79s 39ms/step - loss: 0.1875 - accuracy: 0.9375 - val_loss: 0.1757 - val_accuracy: 0.9419\n",
+      "Epoch 6/10\n",
+      "2046/2046 [==============================] - 76s 37ms/step - loss: 0.1487 - accuracy: 0.9508 - val_loss: 0.1489 - val_accuracy: 0.9516\n",
+      "Epoch 7/10\n",
+      "2046/2046 [==============================] - 78s 38ms/step - loss: 0.1274 - accuracy: 0.9582 - val_loss: 0.1201 - val_accuracy: 0.9628\n",
+      "Epoch 8/10\n",
+      "2046/2046 [==============================] - 79s 39ms/step - loss: 0.1063 - accuracy: 0.9650 - val_loss: 0.1006 - val_accuracy: 0.9654\n",
+      "Epoch 9/10\n",
+      "2046/2046 [==============================] - 78s 38ms/step - loss: 0.0958 - accuracy: 0.9686 - val_loss: 0.1325 - val_accuracy: 0.9576\n",
+      "Epoch 10/10\n",
+      "2046/2046 [==============================] - 79s 38ms/step - loss: 0.0837 - accuracy: 0.9732 - val_loss: 0.0970 - val_accuracy: 0.9686\n",
+      "313/313 - 3s - loss: 0.1071 - accuracy: 0.9682 - 3s/epoch - 9ms/step\n",
+      "0.9682000279426575\n"
      ]
     }
    ],
@@ -269,7 +279,7 @@
     "num_filters = 20\n",
     "filter_size = 3\n",
     "pool_size = 2\n",
-    "num_epochs = 5\n",
+    "num_epochs = 10\n",
     "\n",
     "model = Sequential([\n",
     "    Conv2D(num_filters, filter_size, activation='relu', input_shape=train_images[0].shape),\n",
@@ -287,7 +297,7 @@
     "\n",
     "model.compile('adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model.fit(train_images, to_categorical(train_labels), epochs=num_epochs, validation_data=(test_images, to_categorical(test_labels)))\n",
+    "model.fit(train_images, to_categorical(train_labels), epochs=num_epochs, validation_split=0.15)\n",
     "\n",
     "test_loss, test_acc = model.evaluate(test_images,  to_categorical(test_labels), verbose=2)\n",
     "print(test_acc)"
@@ -303,65 +313,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "0\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "2\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "3\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "4\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "5\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "6\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "6\n",
+      "1/1 [==============================] - 0s 72ms/step\n",
+      "A\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "B\n",
+      "1/1 [==============================] - 0s 64ms/step\n",
+      "C\n",
       "1/1 [==============================] - 0s 31ms/step\n",
-      "8\n",
+      "D\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "E\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "F\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "G\n",
       "1/1 [==============================] - 0s 26ms/step\n",
-      "6\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "10\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "11\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "12\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "13\n",
+      "H\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "I\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "J\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "K\n",
       "1/1 [==============================] - 0s 28ms/step\n",
-      "14\n",
+      "L\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "M\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "N\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "O\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "P\n",
+      "1/1 [==============================] - 0s 40ms/step\n",
+      "C\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "R\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "S\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "T\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "U\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "V\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "K\n",
       "1/1 [==============================] - 0s 29ms/step\n",
-      "15\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "16\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "17\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "18\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "19\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "20\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "21\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "21\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "23\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "24\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "25\n"
+      "X\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "Y\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "Z\n"
      ]
     }
    ],
@@ -378,7 +388,8 @@
     "\n",
     "    prediction = model.predict(normalized_image_to_predict)\n",
     "    predicted_letter = list(prediction[0]).index(max(prediction[0]))\n",
-    "    print(predicted_letter)"
+    "    # print(prediction)\n",
+    "    print(predict_letters[predicted_letter])"
    ]
   }
  ],
